snapshots/com/wadpam/openserver/errors/1-SNAPSHOT/maven-metadata.xml.sha1
8c8fc9ba23233a230fd02861ef38f0e84bb2392a